--- a/index.html
+++ b/index.html
@@ -170,10 +170,9 @@
 
     <!-- Footer Section -->
     <footer class="bg-gray-800 text-white py-8 px-4 md:px-8 lg:px-16 text-center rounded-t-lg">
-        <p>&copy; 2025 Digwydd Dev. All rights reserved.</p>
+        <p>&copy; 2025 Digwydd Dev.</p>
         <div class="flex justify-center space-x-6 mt-4">
-            <a href="#" class="text-gray-400 hover:text-white transition-colors duration-300">Privacy Policy</a>
-            <a href="#" class="text-gray-400 hover:text-white transition-colors duration-300">Terms of Service</a>
+           
         </div>
     </footer>
 
